[package]
name = "internship-rust-pyshopjl-3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
regex = "1.10.3"
sha256 = "1.5.0"
threadpool = "1.8.1"
